# pgflows

./: .env.test  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.app  Makefile  README.md  compose.yml  docker-compose.full.yml  docker-compose.yml  pyproject.toml
.claude/docs/: code-review-final.md  pyflows-impl-plan.md  pyflows.md  readme-review-clarity.md  readme-review-content.md
.claude/skills/pg-durable-sql/: SKILL.md
.claude/skills/pgflows/: SKILL.md
.claude/skills/pgflows-publish/: SKILL.md
.github/workflows/: pages.yml
docs/: index.html
docs/superpowers/specs/: 2026-06-08-graph-spec-dsl-compiler-design.md
examples/: push_mode_workflows.py  server.py
examples/ai_sre/: workflow.py
src/pgflows/: __init__.py  app.py  config.py  context.py  dsl.py  exceptions.py  fastapi_integration.py  graph.py  graph_compiler.py  logger.py  migrations.py  pg_durable_client.py  plugins.py  registry.py  schema.sql  sql_exporter.py  step_worker.py  telemetry.py  types.py  worker.py
src/pgflows/backends/: __init__.py  base.py  pg_cron.py  pg_durable.py  pg_state.py  pgmq.py
src/pyflows/: __init__.py  app.py  config.py  context.py  exceptions.py  logger.py  migrations.py  plugins.py  registry.py  schema.sql  sql_exporter.py  telemetry.py  types.py  worker.py
src/pyflows/backends/: __init__.py  base.py  pg_cron.py  pg_durable.py  pg_state.py  pgmq.py
tests/: conftest.py  test_basic.py
tests/e2e/: conftest.py  test_comprehensive.py  test_live_dfpgmq.py  test_live_graph_compiler.py  test_live_pg_cron.py  test_push_mode.py  test_workflow_basic.py  test_workflow_monitor.py  test_workflow_retry.py
tests/e2e/docker/: 01-extensions.sql  Dockerfile  docker-compose.yml  pgflows.conf
tests/unit/: conftest.py  test_app.py  test_config.py  test_context_replay.py  test_dsl.py  test_fastapi_integration.py  test_graph.py  test_graph_compiler.py  test_migrations.py  test_pg_cron.py  test_pg_durable_client.py  test_pg_state.py  test_pgmq.py  test_plugins.py  test_registry.py  test_sql_exporter.py  test_step_worker.py  test_telemetry.py  test_worker.py
