[project]
name = "pyflows"
version = "0.1.0"
description = "Durable workflow engine SDK for Python + Postgres"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nir Adler", email = "me@niradler.com" }]
keywords = ["workflow", "durable", "postgres", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "pydantic",
    "asyncpg",
    "tembo-pgmq-python",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
]

[project.optional-dependencies]
fastapi = ["fastapi", "uvicorn[standard]"]

[project.urls]
Homepage = "https://github.com/niradler/pyflows"
Repository = "https://github.com/niradler/pyflows"
Issues = "https://github.com/niradler/pyflows/issues"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "anyio",
    "ruff>=0.9",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
