[project]
name = "pgflows"
version = "0.1.1"
description = "Durable workflow engine SDK for Python + Postgres"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nir Adler", email = "me@niradler.com" }]
keywords = ["workflow", "durable", "postgres", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13,<3",
    "asyncpg>=0.31,<1",
    "opentelemetry-api>=1.42,<2",
    "opentelemetry-sdk>=1.42,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42,<2",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115,<1", "uvicorn[standard]>=0.34,<1"]

[project.urls]
Homepage = "https://github.com/niradler/pgflows"
Repository = "https://github.com/niradler/pgflows"
Issues = "https://github.com/niradler/pgflows/issues"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-timeout>=2.0,<3",
    "anyio",
    "ruff>=0.9",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "httpx>=0.27,<1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
